--- a/src/style/components/header.sass
+++ b/src/style/components/header.sass
@@ -4,19 +4,21 @@
     margin-top: 60px
     width: 100%
     height: 20em
-    background-color: #f5f8fa
+    background-image: url("./assets/bga_1.jpg")
+    background-repeat: no-repeat
+    background-size: 100%
     border-bottom-style: solid
     border-bottom-width: 1px
-    border-bottom-color: rgba(0, 0, 0, .125)
+    border-bottom-color: white
     border-top-style: solid
-    border-top-width: 1px
-    border-top-color: rgba(0, 0, 0, .125)
+    border-top-width: 2px
+    border-top-color: black
 
   .header_custom
     margin-top: 60px
     width: 100%
     height: 8em
-    background-color: #f5f8fa
+    background-color: gray
     border-bottom-style: solid
     border-bottom-width: 1px
     border-bottom-color: rgba(0, 0, 0, .125)
@@ -32,10 +34,11 @@
   .header_title
     font-size: 50px
     font-weight: bold
+    color: white
 
   .header_skills
     display: flex
-    color: gray
+    color: white
     text-align: center
     width: 1024px
     position: relative
@@ -46,7 +49,7 @@
   .header_skills_item
     text-align: center
     margin-right: 3px
-    border: 1px solid gray
+    border: 1px solid white
     padding: 2px
     border-radius: 5px
 
@@ -59,24 +62,53 @@
     padding: 2px
     border-radius: 5px
 
+  .customeHeaderContentOne
+    font-size: 30px
+    color: white
+    text-align: center
+  .customeHeaderContentTwo
+    font-size: 20px
+    color: white
+    text-align: center
+
+  .header_content
+    text-align: center
+    margin-top: 2%
+
+    .header_image
+      width: 360px
+      height: auto
+      //border-radius: 50%
+      border-style: solid
+      border-width: 1px
+      border-color: rgba(0,0,0,.125)
+      padding: .5rem
+
+    .header_title
+      font-size: 30px
+      font-weight: bold
+
+    .header_description
+      color: white
+
 
 @media screen and (max-width: 850px)
   .header
     margin-top: 60px
     height: 20em
-    background-color: #f5f8fa
+    background-image: url("./assets/bga_1.jpg")
     border-bottom-style: solid
     border-bottom-width: 1px
-    border-bottom-color: rgba(0, 0, 0, .125)
+    border-bottom-color: white
     border-top-style: solid
     border-top-width: 1px
-    border-top-color: rgba(0, 0, 0, .125)
+    border-top-color: black
 
   .header_custom
     margin-top: 60px
     width: 100%
     height: 5em
-    background-color: #f5f8fa
+    background-color: gray
     border-bottom-style: solid
     border-bottom-width: 1px
     border-bottom-color: rgba(0, 0, 0, .125)
@@ -92,6 +124,7 @@
   .header_title
     font-size: 30px
     font-weight: bold
+    color: white
 
   .header_skills_container
     width: 70%
@@ -103,7 +136,7 @@
   .header_skills
     display: flex
     flex-wrap: wrap
-    color: gray
+    color: white
     text-align: center
     align-items: center
     justify-content: center
@@ -123,6 +156,36 @@
     color: dodgerblue
     padding: 2px
     border-radius: 5px
+  .customeHeaderContentOne
+    font-size: 22px
+    color: white
+    text-align: center
+    font-weight: bold
+    padding-top: 8%
+  .customeHeaderContentTwo
+    font-size: 16px
+    color: white
+    text-align: center
+    font-weight: bold
+    padding-bottom: 5%
+  .header_content
+    text-align: center
+    margin-top: 2%
+
+    .header_image
+      width: 300px
+      height: auto
+      border-style: solid
+      border-width: 1px
+      border-color: rgba(0,0,0,.125)
+      padding: 1rem
+
+    .header_title
+      font-size: 30px
+      font-weight: bold
+
+    .header_description
+      color: white
 
 //mobile device
 @media screen and (max-width: 330px)
@@ -130,19 +193,19 @@
     margin-top: 100px
     width: 100%
     height: 20em
-    background-color: #f5f8fa
+    background-image: url("./assets/bga_1.jpg")
     border-bottom-style: solid
     border-bottom-width: 1px
-    border-bottom-color: rgba(0, 0, 0, .125)
+    border-bottom-color: white
     border-top-style: solid
     border-top-width: 1px
-    border-top-color: rgba(0, 0, 0, .125)
+    border-top-color: black
 
   .header_custom
     margin-top: 80px
     width: 100%
     height: 4em
-    background-color: #f5f8fa
+    //background-color: #f5f8fa
     border-bottom-style: solid
     border-bottom-width: 1px
     border-bottom-color: rgba(0, 0, 0, .125)
@@ -173,23 +236,33 @@
     border: 1px solid gray
     padding: 2px
     border-radius: 5px
-
-.header_content
-  text-align: center
-  margin-top: 2%
-
-  .header_image
-    width: 120px
-    height: 120px
-    border-radius: 50%
-    border-style: solid
-    border-width: 1px
-    border-color: rgba(0,0,0,.125)
-    padding: .5rem
-
-  .header_title
-    font-size: 30px
+  .customeHeaderContentOne
+    font-size: 20px
+    color: white
+    text-align: center
+    padding-top: 14%
     font-weight: bold
+  .customeHeaderContentTwo
+    font-size: 14px
+    color: white
+    text-align: center
+    padding-bottom: 5%
+    font-weight: bold
+  .header_content
+    text-align: center
+    margin-top: 1%
 
-  .header_description
-    color: gray
+    .header_image
+      width: 230px
+      height: auto
+      border-style: solid
+      border-width: 1px
+      border-color: rgba(0,0,0,.125)
+      padding: 2rem
+
+    .header_title
+      font-size: 30px
+      font-weight: bold
+
+    .header_description
+      color: white
