--- a/src/style/components/header.sass
+++ b/src/style/components/header.sass
@@ -5,7 +5,7 @@
     width: 100%
     height: 20em
     background-image: url("./assets/bga_1.jpg")
-    background-repeat: no-repeat
+    background-repeat: repeat
     background-size: 100%
     border-bottom-style: solid
     border-bottom-width: 1px
@@ -64,11 +64,11 @@
 
   .customeHeaderContentOne
     font-size: 30px
-    color: white
+    color: black
     text-align: center
   .customeHeaderContentTwo
     font-size: 20px
-    color: white
+    color: black
     text-align: center
 
   .header_content
@@ -79,7 +79,7 @@
       width: 360px
       height: auto
       //border-radius: 50%
-      border-style: solid
+      //border-style: solid
       border-width: 1px
       border-color: rgba(0,0,0,.125)
       padding: .5rem
@@ -158,13 +158,13 @@
     border-radius: 5px
   .customeHeaderContentOne
     font-size: 22px
-    color: white
+    color: black
     text-align: center
     font-weight: bold
     padding-top: 8%
   .customeHeaderContentTwo
     font-size: 16px
-    color: white
+    color: black
     text-align: center
     font-weight: bold
     padding-bottom: 5%
@@ -238,13 +238,13 @@
     border-radius: 5px
   .customeHeaderContentOne
     font-size: 20px
-    color: white
+    color: black
     text-align: center
     padding-top: 14%
     font-weight: bold
   .customeHeaderContentTwo
     font-size: 14px
-    color: white
+    color: black
     text-align: center
     padding-bottom: 5%
     font-weight: bold
